# Flow

Flow1D/: .gitignore  .mxproject
Flow1D/Firmware/: .mxproject  Flow.ioc  Makefile  Makefile.backup  STM32L031F4Px_FLASH.ld  workspace.code-workspace
Flow1D/Hardware/: BOM v1.0.ods  Flow-all-pos.csv  Flow-cache.lib  Flow.kicad_pcb  Flow.kicad_pcb-bak  Flow.kicad_pro  Flow.pro  Flow.sch  fp-info-cache  fp-lib-table  oe_flow.bck  oe_flow.lib  oe_stm32.dcm  oe_stm32.lib
Flow1D/Hardware/flow.pretty/: US_RXTX_10mm.kicad_mod
Flow1D/Hardware/oe_piezo.pretty/: ultrasound_piezo_round_D10mmxP6mm.kicad_mod
Flow1D/Test/: CMakeLists.txt  complex.c  complex.h  defines.h  demodulation.c  demodulation.h  test_defines.h  test_demodulation.c  test_demodulation.h  test_main.c
Flow2D/: .gitignore  .mxproject  Flow2D.ioc
Flow2D/Analysis/: poorbode.py  rxsensor.json
Flow2D/Firmware/: .mxproject  Flow2D.ioc  Makefile  Makefile.backup  flow2d.code-workspace
Flow2D/Hardware/: BOM.xlsx  Flow-cache.lib  Flow-top-pos.csv  Flow.kicad_pcb  Flow.kicad_pcb-bak  Flow.pro  Flow.sch  Flow.sch-bak  JLCPCB-CPL.xlsx  fp-info-cache  oe_flow.bck  oe_flow.lib  oe_stm32.lib
Flow2D/Hardware/Gerbers/: Flow-B_Cu.gbr  Flow-B_Mask.gbr  Flow-B_Paste.gbr  Flow-B_SilkS.gbr  Flow-Edge_Cuts.gbr  Flow-F_Cu.gbr  Flow-F_Mask.gbr  Flow-F_Paste.gbr  Flow-F_SilkS.gbr  Flow-job.gbrjob  Flow.drl
Flow2D/Hardware/flow.pretty/: logo32_32.kicad_mod
Flow2D/Hardware/oe_ultrasonic.pretty/: GU1007C-40TR.kicad_mod
Flow2D/Software/: Untitled.ipynb  demod_tables.ipynb  regression.py
Flow2D/v1/Firmware/: Makefile  (+2 more)
(+80 files in other folders)
